force-app/main/default/objects/LogisticInformation__c/LogisticInformation__c.object-meta.xml
<CustomObject>
    <label>Informação Logística</label>
    <nameField>
        <label>Nome de Informação Logística</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informações Logísticas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>