force-app/main/default/objects/LogisticInformation__c/fields/additionalInfo__c.field-meta.xml
<CustomField>
    <fullName>additionalInfo__c</fullName>
    <label>Informação Adicional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>