force-app/main/default/objects/LogisticInformation__c/fields/deliveryChannel__c.field-meta.xml
<CustomField>
    <fullName>deliveryChannel__c</fullName>
    <label>Canal de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>