force-app/main/default/objects/LogisticInformation__c/fields/deliveryCompany__c.field-meta.xml
<CustomField>
    <fullName>deliveryCompany__c</fullName>
    <label>Empresa de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>