force-app/main/default/objects/LogisticInformation__c/fields/dockId__c.field-meta.xml
<CustomField>
    <fullName>dockId__c</fullName>
    <label>Id da Doca</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>