force-app/main/default/objects/LogisticInformation__c/fields/friendlyName__c.field-meta.xml
<CustomField>
    <fullName>friendlyName__c</fullName>
    <label>Nome Amigável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>