force-app/main/default/objects/LogisticInformation__c/fields/isPickupStore__c.field-meta.xml
<CustomField>
    <fullName>isPickupStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loja de Retirada</label>
    <type>Checkbox</type>
</CustomField>