force-app/main/default/objects/LogisticInformation__c/fields/listPrice__c.field-meta.xml
<CustomField>
    <fullName>listPrice__c</fullName>
    <label>Lista de Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>