force-app/main/default/objects/LogisticInformation__c/fields/logisticContract__c.field-meta.xml
<CustomField>
    <fullName>logisticContract__c</fullName>
    <label>Contrato Logístico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>