force-app/main/default/objects/LogisticInformation__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Informações Logísticas</relationshipLabel>
    <relationshipName>Informacoes_Logisticas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>