force-app/main/default/objects/LogisticInformation__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>