force-app/main/default/objects/LogisticInformation__c/fields/sellingPrice__c.field-meta.xml
<CustomField>
    <fullName>sellingPrice__c</fullName>
    <label>Preço de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>