force-app/main/default/objects/LogisticInformation__c/fields/shippingEstimate__c.field-meta.xml
<CustomField>
    <fullName>shippingEstimate__c</fullName>
    <label>Estimativa de Envio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>