force-app/main/default/objects/LogisticInformation__c/fields/shippingEstimateDate__c.field-meta.xml
<CustomField>
    <fullName>shippingEstimateDate__c</fullName>
    <label>Data Estimada de Entrega</label>
    <type>DateTime</type>
</CustomField>